--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "league/csv": "^9.16",
         "nesbot/carbon": "^2.68",
         "pusher/pusher-php-server": "^7.2",
         "yajra/laravel-datatables": "9.0"
