--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "laravel-echo": "^1.15.3"
+        "laravel-echo": "^1.15.3",
+        "qz-tray": "^2.2.3"
     }
 }
