--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "league/csv": "^9.16",
+        "mike42/escpos-php": "^2.2",
         "nesbot/carbon": "^2.68",
         "pusher/pusher-php-server": "^7.2",
         "yajra/laravel-datatables": "9.0"
